--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.CatApp" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.CatApp" parent="android:Theme.Material.Light.NoActionBar">
+
+    </style>
+
 </resources>
